# SPECIAL

./: CMakeLists.txt  LICENSE  README.md
core/: _op_binary.hpp  _op_unary.hpp  op_agg_count.hpp  op_equijoin.hpp  op_filter.hpp  op_idx_equijoin.hpp  op_pac_filter.hpp  op_project.hpp  relation.hpp
exp/: CMakeLists.txt  parallel.sh  parallel_join.cpp  plan_test.cpp  q1.cpp  q1_a.cpp  q1_b.cpp  q2.cpp  q2_a.cpp  q2_b.cpp  q2_eps.cpp  q2_scale.cpp  q3.cpp  q3_a.cpp  q3_b.cpp  q4.cpp  q4_a.cpp  q4_b.cpp  q4_eps.cpp  q4_scale.cpp  q5.cpp  q5_a.cpp  q5_b.cpp  q6.cpp  q6_b.cpp  q7.cpp  q7_b.cpp  q8.cpp  q8_b.cpp  q8_eps.cpp  q8_scale.cpp  selection.cpp
exp_result/plot/: plot_sigmod25.py
exp_result/queries/: q1.txt  q1_baseline_1.txt  q1_baseline_2.txt  q2.txt  q2_baseline_1.txt  q2_baseline_2.txt  q2_eps.txt  q2_scale.txt  q3.txt  q3_baseline_1.txt  q3_baseline_2.txt  q4.txt  q4_baseline_1.txt  q4_baseline_2.txt  q4_eps.txt  q4_scale.txt  q5.txt  q5_baseline_1.txt  q5_baseline_2.txt  q6.txt  q6_baseline_2.txt  q7.txt  q7_baseline_2.txt  q8.txt  q8_baseline_2.txt  q8_eps.txt  q8_scale.txt
exp_result/selection/: selection2_0.txt  selection2_1.txt  selection2_2.txt  selection2_3.txt  selection2_4.txt  selection_0.txt  selection_1.txt  selection_2.txt  selection_3.txt  selection_4.txt
synopsis/: gen_synop.py
test/: CMakeLists.txt  compaction.cpp  equijoin.cpp  example.cpp  filter.cpp  index_equijoin.cpp  oblisort.cpp  oblisort_perf.cpp  pac_filter.cpp  relsort.cpp
util/: oblisort.hpp  rand.hpp
workload/: workload.sql
